--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 # GENERAL
-[ ] smartly construct uri to archive
+[ ] more robust construction of archive uri
 [ ] loosen the filename assumptions or at least centralize it to a single definition
 [ ] some remedial download progress would be cute
 [ ] check for write privs on install
 [ ] command to update Xcode plug-in spec to point to updated clang for analysis only
+[ ] make it installable as a gem?
