update Xcode spec task

--- a/TODO
+++ b/TODO
@@ -3,5 +3,5 @@
 [ ] loosen the filename assumptions or at least centralize it to a single definition
 [ ] some remedial download progress would be cute
 [ ] check for write privs on install
-[ ] command to update Xcode plug-in spec to point to updated clang for analysis only
-[ ] make it installable as a gem?
+[X] command to update Xcode plug-in spec to point to updated clang for analysis only
+[ ] make it installable as a gem, via jeweler!
