--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.2.2 (27 May 2010)
+* make archive uri and archive name 'guess' more flexible to handle checker-241
+
 v0.2.1 (21 May 2010)
 * remove clean command since it is the default
 * rename setup command to setup-xcode
